# RaylibShader_Template

./: .clang-format  .gitignore  Android-build.sh  CMakeLists.txt  CMakePresets.json  README.md  TODO.md  vcpkg-configuration.json
cmake/: Android.cmake  BuildAPK.cmake  LibsConfig.cmake  StaticAnalyzer.cmake  sanitizer.cmake  setting.cmake
resources/android/: AndroidManifest.xml  NativeLoader.java
resources/android/res/values/: strings.xml
resources/assets/resource/shaders/glsl100/: test.fs
resources/assets/resource/shaders/glsl330/: test.fs
source/benchmark/: CMakeLists.txt  ReadMe.md
source/benchmark/include/: Benchmark.hh  Profiler.hh
source/project/: CMakeLists.txt
source/project/include/: helper.hh
source/project/src/: main.cc
source/setup/: CMakeLists.txt
source/setup/config/: config.hh.in
source/setup/pch/: pch.hh
test/: CMakeLists.txt
